--- a/tutorials/bunny-jump/index.html
+++ b/tutorials/bunny-jump/index.html
@@ -6,7 +6,7 @@
   <body
     style="
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       justify-content: center;
       align-items: center;
     "
